--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "next": "16.1.1",
     "postcss": "^8.5.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-phone-number-input": "^3.4.14"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
