Email Integration done with HR_CC mail not defined error

--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,4 @@ MAIL_SECURE=false
 MAIL_USER=tcetanand@gmail.com
 MAIL_PASS=wycdwhzdhekyrrin
 MAIL_FROM=MSL Navora <tcetanand@gmail.com>
+HR_CC=anandnsd.2021@gmail.com
