Added Candidate Testimonials Section

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,7 @@
-
+PORT=4080
+MONGO_URI=mongodb+srv://itsanand129_db_user:RXeCsaIHBrNk2wbk@mil-careers.0dbbpln.mongodb.net/?appName=mil-careers
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USER=tcetanand@gmail.com
+MAIL_PASS=kkxbsnbgabarxvkp
+ADMIN_EMAIL=try.anandn@gmail.com
