--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,41 +1,80 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
+# ======================
+# Dependencies
+# ======================
+node_modules/
+.pnp/
+.pnp.js
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
+# ======================
+# Next.js
+# ======================
+.next/
+out/
+build/
+dist/
 
-# next.js
-/.next/
-/out/
+# ======================
+# Testing / Coverage
+# ======================
+coverage/
 
-# production
-/build
+# ======================
+# Environment Variables
+# ======================
+.env
+.env.local
+.env.development
+.env.production
+.env.*.local
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# ======================
+# Logs
+# ======================
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+*.log
 
-# env files (can opt-in for committing if needed)
-.env*
+# ======================
+# OS / System
+# ======================
+.DS_Store
+Thumbs.db
 
-# vercel
+# ======================
+# Vercel
+# ======================
 .vercel
 
-# typescript
+# ======================
+# TypeScript
+# ======================
 *.tsbuildinfo
 next-env.d.ts
+
+# ======================
+# Cache / Temp
+# ======================
+.cache/
+*.tmp
+*.bak
+*.swp
+*~
+
+# ======================
+# IDE / Editors
+# ======================
+.idea/
+*.sublime-*
+
+# ======================
+# Security
+# ======================
+*.pem
+*.key
