--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,14 @@
 PORT=4080
 MONGO_URI=mongodb+srv://itsanand129_db_user:RXeCsaIHBrNk2wbk@mil-careers.0dbbpln.mongodb.net/?appName=mil-careers
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USER=tcetanand@gmail.com
-MAIL_PASS=kkxbsnbgabarxvkp
-ADMIN_EMAIL=try.anandn@gmail.com
+MAIL_HOST=mail.smtp2go.com
+MAIL_PORT=2525
+MAIL_SECURE=false
+SMTP_USER=maritimesolutionsltd.com
+SMTP_PASS=ZgfrQ34yoxPeSzUb
+MAIL_FROM=recruit@maritimesolutionsltd.com
+HR_MAIL=navora.maritimesolutionsltd@gmail.com
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=587
+# MAIL_USER=tcetanand@gmail.com
+# MAIL_PASS=kkxbsnbgabarxvkp
+# HR_CC=try.anandn@gmail.com
