feat(mail): implement SMTP2GO API for reliable email delivery
This change replaces SMTP-based mailing with SMTP2GO's HTTP API to prevent outbound port blocking in production environments. Includes attachment support and dual email notifications.

--- a/server/.env
+++ b/server/.env
@@ -1,14 +1,10 @@
 PORT=4080
 MONGO_URI=mongodb+srv://itsanand129_db_user:RXeCsaIHBrNk2wbk@mil-careers.0dbbpln.mongodb.net/?appName=mil-careers
-MAIL_HOST=mail.smtp2go.com
-MAIL_PORT=2525
-MAIL_SECURE=false
-SMTP_USER=maritimesolutionsltd.com
-SMTP_PASS=ZgfrQ34yoxPeSzUb
+
+# Frontend (for CORS)
+FRONTEND_URL=http://localhost:3000
+
+# SMTP2GO
+SMTP2GO_API_KEY=api-CD89D5011C5040BD9B7AC1F6922CA417
 MAIL_FROM=recruit@maritimesolutionsltd.com
 HR_MAIL=navora.maritimesolutionsltd@gmail.com
-# MAIL_HOST=smtp.gmail.com
-# MAIL_PORT=587
-# MAIL_USER=tcetanand@gmail.com
-# MAIL_PASS=kkxbsnbgabarxvkp
-# HR_CC=try.anandn@gmail.com
