feat: add candidate form validation, sanitization, and email normalization

--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,7 @@ FRONTEND_URL=http://localhost:3000
 SMTP2GO_API_KEY=api-CD89D5011C5040BD9B7AC1F6922CA417
 MAIL_FROM=recruit@maritimesolutionsltd.com
 HR_MAIL=navora.maritimesolutionsltd@gmail.com
+
+# CORS
+ALLOWED_ORIGINS=https://navora.maritimesolutionsltd.com,http://localhost:3000
+
