--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,38 +1,57 @@
-# Generated .gitignore file for: Node, JavaScript, Express, MongoDB
-
-# Node
+# =========================
+# Node Modules
+# =========================
+# Ignore node_modules in all folders
 node_modules/
-npm-debug.log
-yarn-error.log
-.env
+
+# =========================
+# Logs
+# =========================
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# =========================
+# Environment Variables
+# =========================
+# Ignore all env files
+*.env
+*.env.local
+*.env.*.local
+
+# =========================
+# OS Generated Files
+# =========================
 .DS_Store
+Thumbs.db
+
+# =========================
+# Build/Output Directories
+# =========================
 dist/
+build/
 .cache/
 coverage/
 
-# JavaScript
-# Add JavaScript-specific ignores here
-
-# Express
-# Add Express-specific ignores here
-
-# MongoDB
-# Add MongoDB-specific ignores here
-
-# Common
-.DS_Store
-Thumbs.db
+# =========================
+# Temporary / Backup Files
+# =========================
 *.log
 *.bak
 *.tmp
 *.swp
 *~
 
-# IDE and editor generated files
+# =========================
+# IDE/Editor Configs
+# =========================
 .idea/
 *.sublime-*
+.vscode/
 
-# Local environment files
-.env
-.env.local
-.env.*.local
+# =========================
+# Optional: Client-side build outputs (Next.js)
+# =========================
+.next/
+out/
